--- a/css/main9.css
+++ b/css/main9.css
@@ -1,16 +1,34 @@
 html {
-    font-family:Verdana;
+    font-family: Verdana;
+}
+svg {
+    background-color: #FFF;
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+svg:not(.active):not(.ctrl) {
+    cursor: crosshair;
+}
+svg:not(.active):not(.ctrl) path.link {
+    cursor: pointer;
+}
+.node not(.circleMapG) {
+stroke:#fff;
+stroke-width:1.5px;
 }
 
-.node {
-	stroke:#fff;
-	stroke-width:1.5px;
+.node .circleMapSvg {
+    overflow: visible
 }
 .node text {
-	stroke:darkslategrey;
-	fill:darkslategrey;
+    stroke: darkslategrey;
+    fill: darkslategrey;
 }
 .link {
-	stroke:#999;
-	stroke-opacity:.6;
+    stroke: #999;
+    stroke-opacity: .6;
 }
